SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

SQuirreL does not use the JDK Preference API anymore. Instead the according properties are
  written to the file <userdir>/props.properties. If one now copies a <userdir> from one machine to another
  those properties are copied, too. For user convenience the JDK Preference API is still checked for properties
  that have not yet been moved. (Properties are moved when they are accessed the first time.)
  Note: To find the userdir's path for a SQuirreL installation see menu File --> Global Preferences --> tab General at the window's bottom.

Added new default driver definition for HXTT Word and HXTT PDF.

Option to open SQL file at Session startup,
  see the new right mouse menu item in "Recent files" dialog --> Section "Favourite files for Alias": "Toggle open this file at Session start"

New right mouse menu item in "Recent files" dialog: "Open in file manager"

New preference to define the maximum column width for text outputs, see menu File --> Global Preferences -->  tab SQL --> section General.
  This was asked for in bug #1256.

Up to now SQL result tabs could be toggled sticky which means all following SQL results will go into the sticky tab.
  From now on there is also an option to toggle SQL result tabs anchored.
  An anchored tab will not be removed, when the maximum number of tabs is reached. If you close an anchored tab you will be asked to confirm.
  Both toggles, sticky and anchored, can be accessed by the tabs right mouse menu.

The text fields of the "Copy separated by ..." dialog now grow with the dialog's size.

#362/#173 Keyboard shortcuts are now configurable, see menu File --> "Global Preferences" --> tab "Keyboard shortcuts"