@@ -35,3 +35,14 @@ SplashScreen.info.loadingfile=Loading file -
 
 
 ThreadPanel.refresh=Refresh
+
+AboutBoxDialog.command.line=Command line arguments
+
+
+
+CommandlinePanel.column.short.option=Short option
+CommandlinePanel.column.long.option=Long option
+CommandlinePanel.column.option.description=Description
+
+
+CommandlinePanel.current.command.line=Current command line arguments:\n{0}
